// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
  binaryTargets = ["native", "debian-openssl-3.0.x", "debian-openssl-1.1.x"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Statuses {
	online
	offline
	ingame
}

enum GameType {
	Robot
	Retro
	CoolCat
}

enum ChatAccess {
	public
	private
	protected
}

model User {
	id			Int @id @default(autoincrement())
	login42		String @unique
	nickname	String @unique
	avatar		String @default("default-avatar")

	createdAt	DateTime @default(now())
	//updatedAt	DateTime @updatedAt

	has2fa		Boolean @default(false)
	secret2fa	String?

	status		Statuses @default(offline)

	win			Int @default(0)
	loss		Int @default(0)
	LP			Int @default(100)

	friends1	Friendship[] @relation("UserFriends1")
	friends2	Friendship[] @relation("UserFriends2")

	requester	FriendRequest[] @relation("Requester")
	requested	FriendRequest[] @relation("Requested")

	blocked		Blocked[] @relation("Blocker")
	blockedBy	Blocked[] @relation("Blocked")

	matchesP1	Match[] @relation("UserMatchesP1")
	matchesP2	Match[] @relation("UserMatchesP2")

	achievements Achievements?

	channels	Member[]
	bans		Banned[]
	invites		Invited[]

	chanmsg		Chanmsg[]
	privmsg		Privmsg[]
}

model Match {
	id			Int @id @default(autoincrement())
	date		DateTime @default(now())

	user1     	User @relation("UserMatchesP1", fields: [user1Id], references: [id])
	user1Id   	Int

	user2     	User @relation("UserMatchesP2", fields: [user2Id], references: [id])
	user2Id   	Int

	p1LP		Int  //at start of game ? save gain/loss ?
	p2LP		Int

	p1score		Int
	p2score		Int

	type		GameType
}

model Achievements {
	id			Int @id @default(autoincrement())
	
	user		User @relation(fields: [userId], references: [id])
	userId		Int @unique

	playOne		Boolean @default(false)
	win3to0		Boolean @default(false)
	win3inRow	Boolean @default(false)
	reach500LP	Boolean @default(false)

	win5		Boolean @default(false)
	win10		Boolean @default(false)
	win20		Boolean @default(false)
	win50		Boolean @default(false)

	//add more ?
}

model Channel {
	id			Int @id @default(autoincrement())
	name		String @unique

	access		ChatAccess
	password	String?

	members		Member[]
	bans		Banned[]
	invited		Invited[]

	messages	Chanmsg[]
}

model Friendship {
	id			Int @id @default(autoincrement())
	
	user1		User @relation("UserFriends1", fields: [user1Id], references: [id])
	user1Id		Int
	
	user2		User @relation("UserFriends2", fields: [user2Id], references: [id])
	user2Id		Int

	messages1	Privmsg[] @relation("Privmsg1")
	messages2	Privmsg[] @relation("Privmsg2")

	@@unique([user1Id, user2Id])
}

model FriendRequest {
	id			Int @id @default(autoincrement())

	requester	User @relation("Requester", fields: [requesterId], references: [id])
	requesterId	Int

	requested	User @relation("Requested", fields: [requestedId], references: [id])
	requestedId	Int

	@@unique([requesterId, requestedId])
}

model Blocked {
	id        	Int      @id @default(autoincrement())

	blocker   	User     @relation("Blocker", fields: [blockerId], references: [id])
	blockerId 	Int

	blocked   	User     @relation("Blocked", fields: [blockedId], references: [id])
	blockedId 	Int

	@@unique([blockerId, blockedId])
}

model Member {
	id			Int @id @default(autoincrement())

	channel		Channel @relation(fields: [chanId], references: [id])
	chanId		Int

	user		User @relation(fields: [userId], references: [id])
	userId		Int

	owner		Boolean @default(false)
	admin		Boolean @default(false)
	muted		Boolean @default(false)
	muteEnd		DateTime?

	@@unique([chanId, userId])
}

model Banned {
	id			Int @id @default(autoincrement())

	channel		Channel @relation(fields: [chanId], references: [id])
	chanId		Int

	user		User @relation(fields: [userId], references: [id])
	userId		Int

	@@unique([chanId, userId])
}

model Invited {
	id			Int @id @default(autoincrement())

	channel		Channel @relation(fields: [chanId], references: [id])
	chanId		Int

	user		User @relation(fields: [userId], references: [id])
	userId		Int

	@@unique([chanId, userId])
}

model Chanmsg {
	id			Int @id @default(autoincrement())
	createdAt	DateTime @default(now())

	channel		Channel @relation(fields: [chanId], references: [id])
	chanId		Int

	sender		User @relation(fields: [userId], references: [id])
	userId		Int

	message		String
	isCommand	Boolean
}

// RELOU???????
model Privmsg {
	id			Int @id @default(autoincrement())
	createdAt	DateTime @default(now())

	friend1		Friendship @relation("Privmsg1", fields: [friend1Id], references: [id])
	friend1Id	Int
	friend2		Friendship @relation("Privmsg2", fields: [friend2Id], references: [id])
	friend2Id	Int

	sender		User @relation(fields: [userId], references: [id])
	userId		Int

	message		String
	isCommand	Boolean
}
