//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  login42 String [unique, not null]
  nickname String [unique, not null]
  avatar String [not null, default: 'default-avatar']
  createdAt DateTime [default: `now()`, not null]
  has2fa Boolean [not null, default: false]
  secret2fa String
  status Statuses [not null, default: 'offline']
  win Int [not null, default: 0]
  loss Int [not null, default: 0]
  LP Int [not null, default: 100]
  friends1 Friendship [not null]
  friends2 Friendship [not null]
  requester FriendRequest [not null]
  requested FriendRequest [not null]
  blocked Blocked [not null]
  blockedBy Blocked [not null]
  matchesP1 Match [not null]
  matchesP2 Match [not null]
  achievements Achievements
  channels Member [not null]
  bans Banned [not null]
  invites Invited [not null]
  chanmsg Chanmsg [not null]
  privmsg Privmsg [not null]
}

Table Match {
  id Int [pk, increment]
  date DateTime [default: `now()`, not null]
  user1 User [not null]
  user1Id Int [not null]
  user2 User [not null]
  user2Id Int [not null]
  p1LP Int [not null]
  p2LP Int [not null]
  p1score Int [not null]
  p2score Int [not null]
  type GameType [not null]
}

Table Achievements {
  id Int [pk, increment]
  user User [not null]
  userId Int [unique, not null]
  playOne Boolean [not null, default: false]
  win3to0 Boolean [not null, default: false]
  win3inRow Boolean [not null, default: false]
  reach500LP Boolean [not null, default: false]
  win5 Boolean [not null, default: false]
  win10 Boolean [not null, default: false]
  win20 Boolean [not null, default: false]
  win50 Boolean [not null, default: false]
}

Table Channel {
  id Int [pk, increment]
  name String [unique, not null]
  access ChatAccess [not null]
  password String
  members Member [not null]
  bans Banned [not null]
  invited Invited [not null]
  messages Chanmsg [not null]
}

Table Friendship {
  id Int [pk, increment]
  user1 User [not null]
  user1Id Int [not null]
  user2 User [not null]
  user2Id Int [not null]
  messages1 Privmsg [not null]
  messages2 Privmsg [not null]

  indexes {
    (user1Id, user2Id) [unique]
  }
}

Table FriendRequest {
  id Int [pk, increment]
  requester User [not null]
  requesterId Int [not null]
  requested User [not null]
  requestedId Int [not null]

  indexes {
    (requesterId, requestedId) [unique]
  }
}

Table Blocked {
  id Int [pk, increment]
  blocker User [not null]
  blockerId Int [not null]
  blocked User [not null]
  blockedId Int [not null]

  indexes {
    (blockerId, blockedId) [unique]
  }
}

Table Member {
  id Int [pk, increment]
  channel Channel [not null]
  chanId Int [not null]
  user User [not null]
  userId Int [not null]
  owner Boolean [not null, default: false]
  admin Boolean [not null, default: false]
  muted Boolean [not null, default: false]
  muteEnd DateTime

  indexes {
    (chanId, userId) [unique]
  }
}

Table Banned {
  id Int [pk, increment]
  channel Channel [not null]
  chanId Int [not null]
  user User [not null]
  userId Int [not null]

  indexes {
    (chanId, userId) [unique]
  }
}

Table Invited {
  id Int [pk, increment]
  channel Channel [not null]
  chanId Int [not null]
  user User [not null]
  userId Int [not null]

  indexes {
    (chanId, userId) [unique]
  }
}

Table Chanmsg {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  channel Channel [not null]
  chanId Int [not null]
  sender User [not null]
  userId Int [not null]
  message String [not null]
  isCommand Boolean [not null]
}

Table Privmsg {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  friend1 Friendship [not null]
  friend1Id Int [not null]
  friend2 Friendship [not null]
  friend2Id Int [not null]
  sender User [not null]
  userId Int [not null]
  message String [not null]
  isCommand Boolean [not null]
}

Enum Statuses {
  online
  offline
  ingame
}

Enum GameType {
  Robot
  Retro
  CoolCat
}

Enum ChatAccess {
  public
  private
  protected
}

Ref: Match.user1Id > User.id

Ref: Match.user2Id > User.id

Ref: Achievements.userId - User.id

Ref: Friendship.user1Id > User.id

Ref: Friendship.user2Id > User.id

Ref: FriendRequest.requesterId > User.id

Ref: FriendRequest.requestedId > User.id

Ref: Blocked.blockerId > User.id

Ref: Blocked.blockedId > User.id

Ref: Member.chanId > Channel.id

Ref: Member.userId > User.id

Ref: Banned.chanId > Channel.id

Ref: Banned.userId > User.id

Ref: Invited.chanId > Channel.id

Ref: Invited.userId > User.id

Ref: Chanmsg.chanId > Channel.id

Ref: Chanmsg.userId > User.id

Ref: Privmsg.friend1Id > Friendship.id

Ref: Privmsg.friend2Id > Friendship.id

Ref: Privmsg.userId > User.id